# comfyui-power-prompt

./: .comfyignore  .gitignore  CHANGELOG.md  README.md  __init__.py  conftest.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: publish.yml
.husky/: pre-commit
docs/: prompt-schema.yaml
examples/: Power Prompt - Example.json  action-pose.yaml  advanced.yaml  basic.yaml  includes-demo.yaml  standard.yaml
nodes/: __init__.py  power_prompt.py  power_prompt_file_partial.py  power_prompt_partial.py  ui_definition.py  utils.py
scripts/: build-editor-bundle.mjs  build-node-bundle.mjs  check-version.mjs  cm-entry.mjs  release.mjs
src/: api.js  constants.js  controls.js  file-partial-panel.js  index.js  node-utils.js  partial-panel.js  power-prompt-panel.js  styles.js  yaml-editor.js
tests/: test_power_prompt_node.py
web/js/: power-prompt-node.js
