[project]
name = "power-prompt"
version = "0.1.2"
description = "ComfyUI node for building rich, conditional prompts with a variable system, weighted random selection, tag-based filtering, and Jinja2 templating."
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Chris Kramins", email = "chris@kramins.ca"}]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.urls]
Repository = "https://github.com/kramins/comfyui-power-prompt"

[tool.comfy]
PublisherId = "kramins"
DisplayName = "Power Prompt"
Icon = ""
